# pubquiz-agent

./: .gitignore  README.md  env  eval.py  main.py  pyproject.toml  test_questions.py
PubTexts/: christmas2019.mp3.txt  newyear2016.mp3.txt  newyear2023.mp3.txt
src/: agent.py  ingestion.py  tools.py
